# bilibili-tui

./: CHANGELOG.md  Cargo.toml  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: update-cargoLock.yml
src/: lib.rs
src/api/: bangumi.rs  client.rs  comment.rs  heartbeat.rs  history.rs  live_client.rs  live_ws.rs  mod.rs
src/app/: actions.rs  mod.rs  network.rs  network_events.rs  runtime.rs
src/application/: action.rs  mod.rs  network.rs
src/infrastructure/: bilibili.rs  media.rs  mod.rs  persistence.rs
src/player/: mod.rs
src/presentation/tui/: mod.rs
src/storage/: mod.rs
src/ui/: bangumi.rs  bangumi_detail.rs  dynamic.rs  dynamic_detail.rs  history.rs  home.rs  live.rs  live_detail.rs  login.rs  mod.rs  search.rs  settings.rs  sidebar.rs  theme.rs  video_card.rs  video_detail.rs
