[package]
name = "bilibili-tui"
version = "1.0.11"
edition = "2024"
authors = ["MareDevi <me@maredevi.moe>"]
description = "A terminal user interface (TUI) client for Bilibili"
license = "MIT"
repository = "https://github.com/MareDevi/bilibili-tui"
homepage = "https://github.com/MareDevi/bilibili-tui"

[dependencies]
anyhow = "1.0.102"
brotli = "8.0.2"
chrono = "0.4.44"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
flate2 = "1.1.9"
futures-util = "0.3.32"
image = "0.25.10"
md5 = "0.8.0"
opaline = "0.4"
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
ratatui = { version = "0.30.0", features = ["serde"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
reqwest = { version = "0.13.2", features = ["json", "cookies", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tui-big-text = "0.8.4"
tui-qrcode = { version = "0.2.4", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
